# Rick--n--roll

./: .gitignore  CMakeLists.txt
include/: game.h  menu.h  player_setup.h
src/: game.c  main.c  menu.c  player_setup.c
